# libQtShadowsocks

./: .gitignore  .travis.yml  CMakeLists.txt  QtShadowsocks.pro  README.md  basecontroller.h  conanfile.txt  connection.cpp  connection.h  encryptor.cpp  encryptor.h  libQtShadowsocks.pro  libQtShadowsocks.spec  libqtshadowsocks.pro  local.cpp  local.h  localcontroller.cpp  localcontroller.h  profile.h  qtshadowsocks_global.h  sprofile.h
client/: README.md  client.cpp  client.h  config.json  main.cpp  shadowsocks-libqss.pro  ss-libqt.pro  sslocal-libqss.pro  utils.cpp  utils.h
debian/: changelog  control  copyright  libqtshadowsocks-dev.install  libqtshadowsocks.install  shadowsocks-libqtshadowsocks.install
lib/: CMakeLists.txt  QtShadowsocks  QtShadowsocks.pc.in  QtShadowsocks.pri  address.cpp  address.h  addresstester.cpp  addresstester.h  chacha.cpp  chacha.h  cipher.cpp  cipher.h  common.cpp  common.h  connection.cpp  connection.h  controller.cpp  controller.h  encryptor.cpp  encryptor.h  encryptorprivate.cpp  encryptorprivate.h  export.h  httpheaders.cpp  httpheaders.h  httpproxy.cpp  httpproxy.h  libQtShadowsocks.pro  mtqtcpserver.cpp  mtqtcpserver.h  mtsocketthread.cpp  mtsocketthread.h  profile.cpp  profile.h  rc4.cpp  rc4.h  socketstream.cpp  socketstream.h  tcprelay.cpp  tcprelay.h  (+4 more)
lib/crypto/: CMakeLists.txt  chacha.cpp  chacha.h  cipher.cpp  cipher.h  encryptor.cpp  encryptor.h  rc4.cpp  rc4.h
lib/msvc2013/: QtShadowsocks.lib
lib/network/: CMakeLists.txt  httpproxy.cpp  httpproxy.h  socketstream.cpp  socketstream.h  tcprelay.cpp  tcprelay.h  tcprelayclient.cpp  tcprelayclient.h  tcprelayserver.cpp  tcprelayserver.h  tcpserver.cpp  tcpserver.h  udprelay.cpp  udprelay.h
lib/types/: CMakeLists.txt  address.cpp  address.h  profile.cpp  profile.h
lib/util/: CMakeLists.txt  addresstester.cpp  addresstester.h  common.cpp  controller.cpp  controller.h  export.h
qca/include/: QtCrypto  qca.h  qca_basic.h  qca_cert.h  qca_core.h  qca_export.h  qca_keystore.h  qca_publickey.h  qca_safetimer.h  qca_securelayer.h  qca_securemessage.h  qca_support.h  qca_textfilter.h  qca_tools.h  qca_version.h  qcaprovider.h  qpipe.h
qca/lib/msvc2013/: qca-ossl.lib
shadowsocks-libqss/: CMakeLists.txt  README.md  client.cpp  client.h  config.json  main.cpp  shadowsocks-libqss.pro  utils.cpp  utils.h
src/: QtShadowsocks.pri  address.cpp  address.h  basecontroller.cpp  basecontroller.h  chacha.cpp  chacha.h  cipher.cpp  cipher.h  common.cpp  common.h  connection.cpp  connection.h  controller.cpp  controller.h  encryptor.cpp  encryptor.h  localcontroller.cpp  localcontroller.h  profile.h  servercontroller.cpp  servercontroller.h  udprelay.cpp  udprelay.h
test/: CMakeLists.txt  address.cpp  address.t.cpp  address.t.h  chacha.cpp  chacha.t.cpp  chacha.t.h  cipher.cpp  cipher.t.cpp  cipher.t.h  encryptor.cpp  encryptor.t.cpp  encryptor.t.h  main.cpp  profile.cpp  profile.t.cpp  profile.t.h  test.pro
